[gd_scene load_steps=9 format=3 uid="uid://dhdkujiu727ps"]

[ext_resource type="PackedScene" uid="uid://dj7bibbp6fqtd" path="res://scenes/blocks/holed.tscn" id="1_6mfdx"]
[ext_resource type="Script" uid="uid://xgqwtvxayrmd" path="res://scripts/menu_hole.gd" id="2_8ob1a"]
[ext_resource type="PackedScene" uid="uid://dmpswamk0dvpl" path="res://models/decorations/hole-lid.fbx" id="3_0kub4"]
[ext_resource type="PhysicsMaterial" uid="uid://cnj6pjoh8s4f5" path="res://scenes/blocks/default_surface_mat.tres" id="4_dxla1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8ob1a"]
size = Vector3(1.57227, 1, 1.48584)

[sub_resource type="BoxShape3D" id="BoxShape3D_0kub4"]
size = Vector3(1.7, 0.1, 1.7)

[sub_resource type="ViewportTexture" id="ViewportTexture_dxla1"]
viewport_path = NodePath("Hole Info/SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_dxla1"]
size = Vector3(2, 2, 3)

[node name="Holed" node_paths=PackedStringArray("_lid", "_lid_collider", "_level_label") instance=ExtResource("1_6mfdx")]
script = ExtResource("2_8ob1a")
_lid = NodePath("hole-lid")
_lid_collider = NodePath("hole-lid/StaticBody3D/CollisionShape3D")
_level_label = NodePath("Hole Info/SubViewport/Label")

[node name="Hole Trigger" type="Area3D" parent="." index="2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hole Trigger" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00577266, -0.638351, -0.0160804)
shape = SubResource("BoxShape3D_8ob1a")

[node name="hole-lid" parent="." index="3" instance=ExtResource("3_0kub4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="hole-lid" index="1"]
physics_material_override = ExtResource("4_dxla1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hole-lid/StaticBody3D" index="0"]
shape = SubResource("BoxShape3D_0kub4")

[node name="Hole Info" type="Node3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="SubViewport" type="SubViewport" parent="Hole Info" index="0"]
transparent_bg = true
size = Vector2i(66, 99)

[node name="Label" type="Label" parent="Hole Info/SubViewport" index="0"]
offset_right = 66.0
offset_bottom = 99.0
theme_override_colors/font_color = Color(0.223529, 0.898039, 0.898039, 0.752941)
theme_override_font_sizes/font_size = 72
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Hole Info" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)
billboard = 1
texture = SubResource("ViewportTexture_dxla1")

[node name="Proximity" type="Area3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Proximity" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -0.5)
shape = SubResource("BoxShape3D_dxla1")

[connection signal="body_entered" from="Hole Trigger" to="." method="_on_hole_trigger_body_entered"]
[connection signal="body_entered" from="Proximity" to="." method="_on_proximity_body_entered"]
[connection signal="body_exited" from="Proximity" to="." method="_on_proximity_body_exited"]
